Feat: Complete Refactor.